--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@iconify/react": "^6.0.2",
