--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
