--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "react-typed": "^2.0.12"
